lab04/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     empty -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> empty
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instruction -> assignment
Rule 8     instruction -> conditional_statement
Rule 9     instruction -> print_statement
Rule 10    instruction -> jump_statement
Rule 11    instruction -> return_statement
Rule 12    instruction -> while_loop
Rule 13    instruction -> for_loop
Rule 14    instruction -> instruction_block
Rule 15    instruction_block -> { instructions }
Rule 16    assignment -> assign_id = expression ;
Rule 17    assignment -> assign_id MUL_ASSIGN expression ;
Rule 18    assignment -> assign_id DIV_ASSIGN expression ;
Rule 19    assignment -> assign_id PLUS_ASSIGN expression ;
Rule 20    assignment -> assign_id SUB_ASSIGN expression ;
Rule 21    assign_id -> ID
Rule 22    assign_id -> ID vector
Rule 23    expression -> expression_binop
Rule 24    expression -> expression_relop
Rule 25    expression -> expression_unary
Rule 26    expression -> matrix_funcs
Rule 27    expression -> constant
Rule 28    expression -> matrix
Rule 29    expression -> vector
Rule 30    expression -> ID
Rule 31    expression -> ( expression )
Rule 32    expression_binop -> expression + expression
Rule 33    expression_binop -> expression - expression
Rule 34    expression_binop -> expression * expression
Rule 35    expression_binop -> expression / expression
Rule 36    expression_binop -> expression MATRIX_PLUS expression
Rule 37    expression_binop -> expression MATRIX_SUB expression
Rule 38    expression_binop -> expression MATRIX_MUL expression
Rule 39    expression_binop -> expression MATRIX_DIV expression
Rule 40    expression_relop -> expression RELOP_EQ expression
Rule 41    expression_relop -> expression RELOP_GT expression
Rule 42    expression_relop -> expression RELOP_LT expression
Rule 43    expression_relop -> expression RELOP_GE expression
Rule 44    expression_relop -> expression RELOP_LE expression
Rule 45    expression_relop -> expression RELOP_NE expression
Rule 46    expression_unary -> - expression
Rule 47    expression_unary -> expression '
Rule 48    matrix_funcs -> ZEROS ( expression_list )
Rule 49    matrix_funcs -> ONES ( expression_list )
Rule 50    matrix_funcs -> EYE ( expression_list )
Rule 51    constant -> number
Rule 52    constant -> DT_STRING
Rule 53    matrix -> [ vectors ]
Rule 54    vectors -> vector
Rule 55    vectors -> vectors , vector
Rule 56    vector -> [ numbers ]
Rule 57    vector -> [ ]
Rule 58    numbers -> numbers , number
Rule 59    numbers -> number
Rule 60    number -> DT_INTEGER
Rule 61    number -> DT_FLOAT
Rule 62    conditional_statement -> IF ( expression ) instruction
Rule 63    conditional_statement -> IF ( expression ) instruction ELSE instruction
Rule 64    jump_statement -> BREAK ;
Rule 65    jump_statement -> CONTINUE ;
Rule 66    return_statement -> RETURN ;
Rule 67    return_statement -> RETURN expression ;
Rule 68    print_statement -> PRINT expression_list ;
Rule 69    expression_list -> expression_list , expression
Rule 70    expression_list -> expression
Rule 71    while_loop -> WHILE ( expression ) instruction
Rule 72    for_loop -> FOR ID = range_value : range_value instruction
Rule 73    range_value -> DT_INTEGER
Rule 74    range_value -> ID

Terminals, with rules where they appear

'                    : 47
(                    : 31 48 49 50 62 63 71
)                    : 31 48 49 50 62 63 71
*                    : 34
+                    : 32
,                    : 55 58 69
-                    : 33 46
/                    : 35
:                    : 72
;                    : 16 17 18 19 20 64 65 66 67 68
=                    : 16 72
BREAK                : 64
CONTINUE             : 65
DIV_ASSIGN           : 18
DT_FLOAT             : 61
DT_INTEGER           : 60 73
DT_STRING            : 52
ELSE                 : 63
EYE                  : 50
FOR                  : 72
ID                   : 21 22 30 72 74
IF                   : 62 63
MATRIX_DIV           : 39
MATRIX_MUL           : 38
MATRIX_PLUS          : 36
MATRIX_SUB           : 37
MUL_ASSIGN           : 17
ONES                 : 49
PLUS_ASSIGN          : 19
PRINT                : 68
RELOP_EQ             : 40
RELOP_GE             : 43
RELOP_GT             : 41
RELOP_LE             : 44
RELOP_LT             : 42
RELOP_NE             : 45
RETURN               : 66 67
SUB_ASSIGN           : 20
WHILE                : 71
ZEROS                : 48
[                    : 53 56 57
]                    : 53 56 57
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

assign_id            : 16 17 18 19 20
assignment           : 7
conditional_statement : 8
constant             : 27
empty                : 4
expression           : 16 17 18 19 20 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 62 63 67 69 70 71
expression_binop     : 23
expression_list      : 48 49 50 68 69
expression_relop     : 24
expression_unary     : 25
for_loop             : 13
instruction          : 5 6 62 63 63 71 72
instruction_block    : 14
instructions         : 3 5 15
instructions_opt     : 1
jump_statement       : 10
matrix               : 28
matrix_funcs         : 26
number               : 51 58 59
numbers              : 56 58
print_statement      : 9
program              : 0
range_value          : 72 72
return_statement     : 11
vector               : 22 29 54 55
vectors              : 53 55
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> . empty
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (2) empty -> .
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (62) conditional_statement -> . IF ( expression ) instruction
    (63) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (68) print_statement -> . PRINT expression_list ;
    (64) jump_statement -> . BREAK ;
    (65) jump_statement -> . CONTINUE ;
    (66) return_statement -> . RETURN ;
    (67) return_statement -> . RETURN expression ;
    (71) while_loop -> . WHILE ( expression ) instruction
    (72) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    $end            reduce using rule 2 (empty -> .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (62) conditional_statement -> . IF ( expression ) instruction
    (63) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (68) print_statement -> . PRINT expression_list ;
    (64) jump_statement -> . BREAK ;
    (65) jump_statement -> . CONTINUE ;
    (66) return_statement -> . RETURN ;
    (67) return_statement -> . RETURN expression ;
    (71) while_loop -> . WHILE ( expression ) instruction
    (72) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instruction                    shift and go to state 24
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 4

    (4) instructions_opt -> empty .

    $end            reduce using rule 4 (instructions_opt -> empty .)


state 5

    (6) instructions -> instruction .

    IF              reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    {               reduce using rule 6 (instructions -> instruction .)
    ID              reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)


state 6

    (7) instruction -> assignment .

    IF              reduce using rule 7 (instruction -> assignment .)
    PRINT           reduce using rule 7 (instruction -> assignment .)
    BREAK           reduce using rule 7 (instruction -> assignment .)
    CONTINUE        reduce using rule 7 (instruction -> assignment .)
    RETURN          reduce using rule 7 (instruction -> assignment .)
    WHILE           reduce using rule 7 (instruction -> assignment .)
    FOR             reduce using rule 7 (instruction -> assignment .)
    {               reduce using rule 7 (instruction -> assignment .)
    ID              reduce using rule 7 (instruction -> assignment .)
    $end            reduce using rule 7 (instruction -> assignment .)
    }               reduce using rule 7 (instruction -> assignment .)
    ELSE            reduce using rule 7 (instruction -> assignment .)


state 7

    (8) instruction -> conditional_statement .

    IF              reduce using rule 8 (instruction -> conditional_statement .)
    PRINT           reduce using rule 8 (instruction -> conditional_statement .)
    BREAK           reduce using rule 8 (instruction -> conditional_statement .)
    CONTINUE        reduce using rule 8 (instruction -> conditional_statement .)
    RETURN          reduce using rule 8 (instruction -> conditional_statement .)
    WHILE           reduce using rule 8 (instruction -> conditional_statement .)
    FOR             reduce using rule 8 (instruction -> conditional_statement .)
    {               reduce using rule 8 (instruction -> conditional_statement .)
    ID              reduce using rule 8 (instruction -> conditional_statement .)
    $end            reduce using rule 8 (instruction -> conditional_statement .)
    }               reduce using rule 8 (instruction -> conditional_statement .)
    ELSE            reduce using rule 8 (instruction -> conditional_statement .)


state 8

    (9) instruction -> print_statement .

    IF              reduce using rule 9 (instruction -> print_statement .)
    PRINT           reduce using rule 9 (instruction -> print_statement .)
    BREAK           reduce using rule 9 (instruction -> print_statement .)
    CONTINUE        reduce using rule 9 (instruction -> print_statement .)
    RETURN          reduce using rule 9 (instruction -> print_statement .)
    WHILE           reduce using rule 9 (instruction -> print_statement .)
    FOR             reduce using rule 9 (instruction -> print_statement .)
    {               reduce using rule 9 (instruction -> print_statement .)
    ID              reduce using rule 9 (instruction -> print_statement .)
    $end            reduce using rule 9 (instruction -> print_statement .)
    }               reduce using rule 9 (instruction -> print_statement .)
    ELSE            reduce using rule 9 (instruction -> print_statement .)


state 9

    (10) instruction -> jump_statement .

    IF              reduce using rule 10 (instruction -> jump_statement .)
    PRINT           reduce using rule 10 (instruction -> jump_statement .)
    BREAK           reduce using rule 10 (instruction -> jump_statement .)
    CONTINUE        reduce using rule 10 (instruction -> jump_statement .)
    RETURN          reduce using rule 10 (instruction -> jump_statement .)
    WHILE           reduce using rule 10 (instruction -> jump_statement .)
    FOR             reduce using rule 10 (instruction -> jump_statement .)
    {               reduce using rule 10 (instruction -> jump_statement .)
    ID              reduce using rule 10 (instruction -> jump_statement .)
    $end            reduce using rule 10 (instruction -> jump_statement .)
    }               reduce using rule 10 (instruction -> jump_statement .)
    ELSE            reduce using rule 10 (instruction -> jump_statement .)


state 10

    (11) instruction -> return_statement .

    IF              reduce using rule 11 (instruction -> return_statement .)
    PRINT           reduce using rule 11 (instruction -> return_statement .)
    BREAK           reduce using rule 11 (instruction -> return_statement .)
    CONTINUE        reduce using rule 11 (instruction -> return_statement .)
    RETURN          reduce using rule 11 (instruction -> return_statement .)
    WHILE           reduce using rule 11 (instruction -> return_statement .)
    FOR             reduce using rule 11 (instruction -> return_statement .)
    {               reduce using rule 11 (instruction -> return_statement .)
    ID              reduce using rule 11 (instruction -> return_statement .)
    $end            reduce using rule 11 (instruction -> return_statement .)
    }               reduce using rule 11 (instruction -> return_statement .)
    ELSE            reduce using rule 11 (instruction -> return_statement .)


state 11

    (12) instruction -> while_loop .

    IF              reduce using rule 12 (instruction -> while_loop .)
    PRINT           reduce using rule 12 (instruction -> while_loop .)
    BREAK           reduce using rule 12 (instruction -> while_loop .)
    CONTINUE        reduce using rule 12 (instruction -> while_loop .)
    RETURN          reduce using rule 12 (instruction -> while_loop .)
    WHILE           reduce using rule 12 (instruction -> while_loop .)
    FOR             reduce using rule 12 (instruction -> while_loop .)
    {               reduce using rule 12 (instruction -> while_loop .)
    ID              reduce using rule 12 (instruction -> while_loop .)
    $end            reduce using rule 12 (instruction -> while_loop .)
    }               reduce using rule 12 (instruction -> while_loop .)
    ELSE            reduce using rule 12 (instruction -> while_loop .)


state 12

    (13) instruction -> for_loop .

    IF              reduce using rule 13 (instruction -> for_loop .)
    PRINT           reduce using rule 13 (instruction -> for_loop .)
    BREAK           reduce using rule 13 (instruction -> for_loop .)
    CONTINUE        reduce using rule 13 (instruction -> for_loop .)
    RETURN          reduce using rule 13 (instruction -> for_loop .)
    WHILE           reduce using rule 13 (instruction -> for_loop .)
    FOR             reduce using rule 13 (instruction -> for_loop .)
    {               reduce using rule 13 (instruction -> for_loop .)
    ID              reduce using rule 13 (instruction -> for_loop .)
    $end            reduce using rule 13 (instruction -> for_loop .)
    }               reduce using rule 13 (instruction -> for_loop .)
    ELSE            reduce using rule 13 (instruction -> for_loop .)


state 13

    (14) instruction -> instruction_block .

    IF              reduce using rule 14 (instruction -> instruction_block .)
    PRINT           reduce using rule 14 (instruction -> instruction_block .)
    BREAK           reduce using rule 14 (instruction -> instruction_block .)
    CONTINUE        reduce using rule 14 (instruction -> instruction_block .)
    RETURN          reduce using rule 14 (instruction -> instruction_block .)
    WHILE           reduce using rule 14 (instruction -> instruction_block .)
    FOR             reduce using rule 14 (instruction -> instruction_block .)
    {               reduce using rule 14 (instruction -> instruction_block .)
    ID              reduce using rule 14 (instruction -> instruction_block .)
    $end            reduce using rule 14 (instruction -> instruction_block .)
    }               reduce using rule 14 (instruction -> instruction_block .)
    ELSE            reduce using rule 14 (instruction -> instruction_block .)


state 14

    (16) assignment -> assign_id . = expression ;
    (17) assignment -> assign_id . MUL_ASSIGN expression ;
    (18) assignment -> assign_id . DIV_ASSIGN expression ;
    (19) assignment -> assign_id . PLUS_ASSIGN expression ;
    (20) assignment -> assign_id . SUB_ASSIGN expression ;

    =               shift and go to state 25
    MUL_ASSIGN      shift and go to state 26
    DIV_ASSIGN      shift and go to state 27
    PLUS_ASSIGN     shift and go to state 28
    SUB_ASSIGN      shift and go to state 29


state 15

    (62) conditional_statement -> IF . ( expression ) instruction
    (63) conditional_statement -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 30


state 16

    (68) print_statement -> PRINT . expression_list ;
    (69) expression_list -> . expression_list , expression
    (70) expression_list -> . expression
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . vector
    (30) expression -> . ID
    (31) expression -> . ( expression )
    (32) expression_binop -> . expression + expression
    (33) expression_binop -> . expression - expression
    (34) expression_binop -> . expression * expression
    (35) expression_binop -> . expression / expression
    (36) expression_binop -> . expression MATRIX_PLUS expression
    (37) expression_binop -> . expression MATRIX_SUB expression
    (38) expression_binop -> . expression MATRIX_MUL expression
    (39) expression_binop -> . expression MATRIX_DIV expression
    (40) expression_relop -> . expression RELOP_EQ expression
    (41) expression_relop -> . expression RELOP_GT expression
    (42) expression_relop -> . expression RELOP_LT expression
    (43) expression_relop -> . expression RELOP_GE expression
    (44) expression_relop -> . expression RELOP_LE expression
    (45) expression_relop -> . expression RELOP_NE expression
    (46) expression_unary -> . - expression
    (47) expression_unary -> . expression '
    (48) matrix_funcs -> . ZEROS ( expression_list )
    (49) matrix_funcs -> . ONES ( expression_list )
    (50) matrix_funcs -> . EYE ( expression_list )
    (51) constant -> . number
    (52) constant -> . DT_STRING
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]
    (60) number -> . DT_INTEGER
    (61) number -> . DT_FLOAT

    ID              shift and go to state 40
    (               shift and go to state 41
    -               shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    DT_STRING       shift and go to state 47
    [               shift and go to state 48
    DT_INTEGER      shift and go to state 49
    DT_FLOAT        shift and go to state 50

    expression_list                shift and go to state 31
    expression                     shift and go to state 32
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    vector                         shift and go to state 39
    number                         shift and go to state 46

state 17

    (64) jump_statement -> BREAK . ;

    ;               shift and go to state 51


state 18

    (65) jump_statement -> CONTINUE . ;

    ;               shift and go to state 52


state 19

    (66) return_statement -> RETURN . ;
    (67) return_statement -> RETURN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . vector
    (30) expression -> . ID
    (31) expression -> . ( expression )
    (32) expression_binop -> . expression + expression
    (33) expression_binop -> . expression - expression
    (34) expression_binop -> . expression * expression
    (35) expression_binop -> . expression / expression
    (36) expression_binop -> . expression MATRIX_PLUS expression
    (37) expression_binop -> . expression MATRIX_SUB expression
    (38) expression_binop -> . expression MATRIX_MUL expression
    (39) expression_binop -> . expression MATRIX_DIV expression
    (40) expression_relop -> . expression RELOP_EQ expression
    (41) expression_relop -> . expression RELOP_GT expression
    (42) expression_relop -> . expression RELOP_LT expression
    (43) expression_relop -> . expression RELOP_GE expression
    (44) expression_relop -> . expression RELOP_LE expression
    (45) expression_relop -> . expression RELOP_NE expression
    (46) expression_unary -> . - expression
    (47) expression_unary -> . expression '
    (48) matrix_funcs -> . ZEROS ( expression_list )
    (49) matrix_funcs -> . ONES ( expression_list )
    (50) matrix_funcs -> . EYE ( expression_list )
    (51) constant -> . number
    (52) constant -> . DT_STRING
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]
    (60) number -> . DT_INTEGER
    (61) number -> . DT_FLOAT

    ;               shift and go to state 53
    ID              shift and go to state 40
    (               shift and go to state 41
    -               shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    DT_STRING       shift and go to state 47
    [               shift and go to state 48
    DT_INTEGER      shift and go to state 49
    DT_FLOAT        shift and go to state 50

    expression                     shift and go to state 54
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    vector                         shift and go to state 39
    number                         shift and go to state 46

state 20

    (71) while_loop -> WHILE . ( expression ) instruction

    (               shift and go to state 55


state 21

    (72) for_loop -> FOR . ID = range_value : range_value instruction

    ID              shift and go to state 56


state 22

    (21) assign_id -> ID .
    (22) assign_id -> ID . vector
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]

    =               reduce using rule 21 (assign_id -> ID .)
    MUL_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    DIV_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    PLUS_ASSIGN     reduce using rule 21 (assign_id -> ID .)
    SUB_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    [               shift and go to state 58

    vector                         shift and go to state 57

state 23

    (15) instruction_block -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (62) conditional_statement -> . IF ( expression ) instruction
    (63) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (68) print_statement -> . PRINT expression_list ;
    (64) jump_statement -> . BREAK ;
    (65) jump_statement -> . CONTINUE ;
    (66) return_statement -> . RETURN ;
    (67) return_statement -> . RETURN expression ;
    (71) while_loop -> . WHILE ( expression ) instruction
    (72) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instructions                   shift and go to state 59
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 24

    (5) instructions -> instructions instruction .

    IF              reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 25

    (16) assignment -> assign_id = . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . vector
    (30) expression -> . ID
    (31) expression -> . ( expression )
    (32) expression_binop -> . expression + expression
    (33) expression_binop -> . expression - expression
    (34) expression_binop -> . expression * expression
    (35) expression_binop -> . expression / expression
    (36) expression_binop -> . expression MATRIX_PLUS expression
    (37) expression_binop -> . expression MATRIX_SUB expression
    (38) expression_binop -> . expression MATRIX_MUL expression
    (39) expression_binop -> . expression MATRIX_DIV expression
    (40) expression_relop -> . expression RELOP_EQ expression
    (41) expression_relop -> . expression RELOP_GT expression
    (42) expression_relop -> . expression RELOP_LT expression
    (43) expression_relop -> . expression RELOP_GE expression
    (44) expression_relop -> . expression RELOP_LE expression
    (45) expression_relop -> . expression RELOP_NE expression
    (46) expression_unary -> . - expression
    (47) expression_unary -> . expression '
    (48) matrix_funcs -> . ZEROS ( expression_list )
    (49) matrix_funcs -> . ONES ( expression_list )
    (50) matrix_funcs -> . EYE ( expression_list )
    (51) constant -> . number
    (52) constant -> . DT_STRING
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]
    (60) number -> . DT_INTEGER
    (61) number -> . DT_FLOAT

    ID              shift and go to state 40
    (               shift and go to state 41
    -               shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    DT_STRING       shift and go to state 47
    [               shift and go to state 48
    DT_INTEGER      shift and go to state 49
    DT_FLOAT        shift and go to state 50

    expression                     shift and go to state 60
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    vector                         shift and go to state 39
    number                         shift and go to state 46

state 26

    (17) assignment -> assign_id MUL_ASSIGN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . vector
    (30) expression -> . ID
    (31) expression -> . ( expression )
    (32) expression_binop -> . expression + expression
    (33) expression_binop -> . expression - expression
    (34) expression_binop -> . expression * expression
    (35) expression_binop -> . expression / expression
    (36) expression_binop -> . expression MATRIX_PLUS expression
    (37) expression_binop -> . expression MATRIX_SUB expression
    (38) expression_binop -> . expression MATRIX_MUL expression
    (39) expression_binop -> . expression MATRIX_DIV expression
    (40) expression_relop -> . expression RELOP_EQ expression
    (41) expression_relop -> . expression RELOP_GT expression
    (42) expression_relop -> . expression RELOP_LT expression
    (43) expression_relop -> . expression RELOP_GE expression
    (44) expression_relop -> . expression RELOP_LE expression
    (45) expression_relop -> . expression RELOP_NE expression
    (46) expression_unary -> . - expression
    (47) expression_unary -> . expression '
    (48) matrix_funcs -> . ZEROS ( expression_list )
    (49) matrix_funcs -> . ONES ( expression_list )
    (50) matrix_funcs -> . EYE ( expression_list )
    (51) constant -> . number
    (52) constant -> . DT_STRING
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]
    (60) number -> . DT_INTEGER
    (61) number -> . DT_FLOAT

    ID              shift and go to state 40
    (               shift and go to state 41
    -               shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    DT_STRING       shift and go to state 47
    [               shift and go to state 48
    DT_INTEGER      shift and go to state 49
    DT_FLOAT        shift and go to state 50

    expression                     shift and go to state 61
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    vector                         shift and go to state 39
    number                         shift and go to state 46

state 27

    (18) assignment -> assign_id DIV_ASSIGN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . vector
    (30) expression -> . ID
    (31) expression -> . ( expression )
    (32) expression_binop -> . expression + expression
    (33) expression_binop -> . expression - expression
    (34) expression_binop -> . expression * expression
    (35) expression_binop -> . expression / expression
    (36) expression_binop -> . expression MATRIX_PLUS expression
    (37) expression_binop -> . expression MATRIX_SUB expression
    (38) expression_binop -> . expression MATRIX_MUL expression
    (39) expression_binop -> . expression MATRIX_DIV expression
    (40) expression_relop -> . expression RELOP_EQ expression
    (41) expression_relop -> . expression RELOP_GT expression
    (42) expression_relop -> . expression RELOP_LT expression
    (43) expression_relop -> . expression RELOP_GE expression
    (44) expression_relop -> . expression RELOP_LE expression
    (45) expression_relop -> . expression RELOP_NE expression
    (46) expression_unary -> . - expression
    (47) expression_unary -> . expression '
    (48) matrix_funcs -> . ZEROS ( expression_list )
    (49) matrix_funcs -> . ONES ( expression_list )
    (50) matrix_funcs -> . EYE ( expression_list )
    (51) constant -> . number
    (52) constant -> . DT_STRING
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ numbers ]
    (57) vector -> . [ ]
    (60) number -> . DT_INTEGER
    (61) number -> . DT_FLOAT

    ID              shift and go to state 40
    (               shift and go to state 41
    -               shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    DT_STRING       shift and go to state 47
    [               shift and go to state 48
    DT_INTEGER      shift and go to state 49
    DT_FLOAT        shift and go to state 50

    expression                     shift and go to state 62
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    vector                         shift and go to state 39
    number                         shift and go to state 46

state 28
